[package]
name = "AssemblyScript"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Gelezako/mint-js"

[dependencies]

[package.metadata.near.reproducible_build]
image = "ubuntu:20.04"
container_build_command = ["cargo", "build", "--target", "wasm32-unknown-unknown", "--release"]

