[package]
name = "AssemblyScript"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Gelezako/mint-js"

[dependencies]

[package.metadata.near.reproducible_build]
image = "node:16"
image_digest = "sha256:c4c4cf393abb23b27c7f6266be5b3b42ce4561d5d06bf5f7c9e6673aa1eb9989"
container_build_command = ["npm", "run", "build"]


